# vision_realsense

./: CMakeLists.txt  README.md  model.ckpt
include/: utils.h
scripts/: auto_calib.json  tr.py
scripts/deepLearning/: d2Trial.py  processing_time_trial.py  pyt_try.py  train.py
scripts/deepLearning/expts/trial/: events.out.tfevents.1616780261.supreet.12357.0  events.out.tfevents.1616780320.supreet.12840.0  events.out.tfevents.1616780604.supreet.13203.0  events.out.tfevents.1616780936.supreet.13716.0  events.out.tfevents.1616781030.supreet.13859.0  events.out.tfevents.1616781247.supreet.14185.0  events.out.tfevents.1616781366.supreet.14369.0  events.out.tfevents.1616781457.supreet.14465.0  events.out.tfevents.1616782362.supreet.17195.0  events.out.tfevents.1616782408.supreet.17404.0  events.out.tfevents.1616782462.supreet.17535.0  events.out.tfevents.1616783438.supreet.4110.0  events.out.tfevents.1616784363.supreet.8050.0  events.out.tfevents.1616784500.supreet.8207.0  events.out.tfevents.1616785777.supreet.12591.0  events.out.tfevents.1616786956.beea52c0569a.457.0  metrics.json  (+6 more)
scripts/filtering/: dbscan_clustering.py  filtering_pipeline copy.py  filtering_pipeline.py  filtering_utils.py  outlier_removal.py  plane_removal.py
scripts/realsense/: aligned_frame_display.py  autoCalibration.py  color_streaming.py  colored_capture.py  main2.py  single_ply_capture.py
scripts/segment_making/: image_viewing.py
scripts/visualisation/: display.py  opd_utils.py  viewer.py
src/: alignment_prerejective.cpp  corr_recog.cpp  filtering.cpp  pcd_write.cpp
